[project]
name = "mqtt-influxdb-bridge"
version = "1.0.0"
description = "IoT MQTT to InfluxDB v2 bridge service"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
